# Cpp-Exchange

./: CMakeLists.txt  README.md  test.txt
exchange-platform/exchangeInit/: main.cpp
exchange-platform/ordersInit/: CMakeLists.txt
exchange-platform/usersInit/: CMakeLists.txt
exchangeInit/: CMakeLists.txt  MatchingSystem.cpp  MatchingSystem.h  main.cpp
interface/: CMakeLists.txt  Interface.cpp  Interface.h
main/: CMakeLists.txt  main.cpp
ordersInit/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h
run/: CMakeLists.txt  ExchangeMain.cpp  ExchangeMain.h
tests/: CMakeLists.txt
tests/interfaceTest/: CMakeLists.txt  TestInterface.cpp
tests/orderTest/: CMakeLists.txt  TestCSVReader.cpp  TestOrder.cpp  TestOrderBook.cpp
tests/userTest/: CMakeLists.txt  TestUser.cpp  TestUserManager.cpp
usersInit/: CMakeLists.txt  User.cpp  User.h  UserManager.cpp  UserManager.h  UserWallet.cpp  UserWallet.h
